--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
         <h1>Council Tax File Uploader</h1>
         <form id="form">
             <div class="form-group">
-                <input name="file" type="file" accept="text/plain" />
+                <input name="fileOne" type="file" accept="text/plain" />
+            </div>
+            <div class="form-group">
+                <input name="fileTwo" type="file" accept="text/plain" />
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
